Fixed spacing between for each navlinks and top header.

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,3 +1,3 @@
-html {
-    font-size: 14px;
-}
+// html {
+//     font-size: 14px;
+// }
